# ScreenSharingTool

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
inc/app/: application.h
inc/capturer/: hw-video-capturer.h  video-capturer.h
inc/config/: app-name.h  common.h  config.h
inc/decoder/: hw-stream-decoder.h  stream-decoder.h
inc/encoder/: hw-stream-encoder.h  stream-encoder.h
inc/graphics/: cross-device-bridge.h  graphics-context.h  texture-buffer.h  yuv-rgb-converter.h
inc/model/: app-view-model.h
inc/network/: srt-environment.h  srt-receiver.h  srt-sender.h  srt-transmitter.h
inc/ui/: application-ui.h  ui-helpers.h
inc/utils/: non-copyable.h
inc/version/: change-log.txt  version.h
src/: application.cpp  application.h  main.cpp
src/capturer/: hw-video-capturer.cpp  module.cpp  video-capturer.cpp
src/config/: config.h
src/decoder/: hw-stream-decoder.cpp  stream-decoder.cpp
src/encoder/: hw-stream-encoder.cpp  stream-encoder.cpp
src/generic/inc/compiler/: attributes.h  extern-c.h
src/generic/inc/debug/: trace.h
src/generic/inc/log/: log.h
src/generic/inc/macro/: dim.h  glue.h  least-set-bit.h  nothing.h  static-assert.h  str.h
src/generic/inc/timer/: timer.h
src/generic/inc/type/: double-uint.h  schar.h  uchar.h  uint.h  ulong.h  ulonglong.h  ushort.h
src/generic/src/debug/: dump.cpp
src/generic/src/log/: log.cpp
src/generic/src/timer/: timer.cpp
src/graphics/: cross-device-bridge.cpp  graphics-context.cpp  texture-buffer.cpp  yuv-rgb-converter.cpp
src/inc/app/: application.h
src/inc/capturer/: module.h  video-capturer.h
src/inc/decoder/: stream-decoder.h
src/inc/encoder/: stream-encoder.h
src/inc/ui/: application-ui.h
src/network/: srt-receiver.cpp  srt-sender.cpp  srt-transmitter.cpp
src/ui/: application-ui.cpp
